monticore-generator/src/test/resources/cocos/valid/ProdAndOverriddenProdUseSameAttrNameForDiffNTs_sub.mc4
/* (c) https://github.com/MontiCore/monticore */
package cocos.valid;

grammar ProdAndOverriddenProdUseSameAttrNameForDiffNTs_sub extends cocos.valid.ProdAndOverriddenProdUseSameAttrNameForDiffNTs_super{

  B;

  Prod1 = c:B;

  Prod2 = c:B;

  Prod3 = c:B;


//todo activate when fixed
// problem with same name in terminal "state" and State as NonTerminal
// Terminal and NonTerminal are not allowed to be seen as the same type
//  State =
//  "state" Name
//  ("entry:" entry:Name)?
//  ( ("{" (State)* "}") | ";") ;
}
